# MachineLearning-PipeLine

./: .dockerignore  Dockerfile  README.md  app.py  deployment.yaml  docker-run.sh  ingress.yaml  main.py  model_dag.py  pyproject.toml  requirements.txt  run_data_transformation.py  run_data_validation.py  run_model_trainer.py  run_pipeline.py  run_statistical_tests.py  service.yaml  template.py
.github/workflows/: integration-delivery.yaml
artifacts/data_transformation/: statstestresults.txt
artifacts/data_validation/: status.txt
artifacts/model_evaluation/: metrics.json
artifacts/model_trainer/: model.joblib
config/: config.yaml  params.yaml  schema.yaml
notebooks/: experiment.ipynb
scripts/: README.md
scripts/check_pipeline_execution/: README.md  run_complete_pipeline.py  run_data_transformation.py  run_data_validation.py  run_model_evaluation.py  run_model_trainer.py  run_statistical_tests.py
src/mlpipeline/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/mlpipeline/config/: configuration.py
src/mlpipeline/constants/: __init__.py
src/mlpipeline/entity/: config_entity.py
src/mlpipeline/exceptions/: exception.py
src/mlpipeline/logging/: __init__.py  logger.py
src/mlpipeline/pipeline/: data_ingestion_pipeline.py  data_transformation_pipeline.py  data_validation_pipeline.py  model_evaluation_pipeline.py  model_trainer_pipeline.py
src/mlpipeline/utils/: common.py  stats_test.py
templates/: index.html
tests/: test_app.py
